# tracevector

./: .gitignore  README.md  pyproject.toml  setup.py  tvx.py
docs/man/: tvx.1
tvx/: banner.py  colors.py  config.py  doctor.py  email.py  ip.py  main.py  phone.py  plugin_loader.py  plugin_security.py  reporting.py  result.py  risk.py  scoring.py  version.py
tvx/plugins/: email_basic.py  email_osint.py  ip_basic.py  ip_osint.py  phone_basic.py
tvx/storage/: base.py  manager.py  sqlite.py
