[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracevector"
version = "1.0.0"
description = "Terminal-based OSINT investigation tool with a modular plugin architecture"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Oedx Digitals" }
]
requires-python = ">=3.9"
dependencies = [
  "phonenumbers"
]

[project.urls]
Homepage = "https://github.com/oedxdigitals/tracevector"
Source = "https://github.com/oedxdigitals/tracevector"

[project.scripts]
tvx = "tvx.main:main"
