[project]
name = "tracevector"
version = "2.5.0"
description = "TRACEVECTOR OSINT CLI Investigator"
requires-python = ">=3.9"
dependencies = [
    "phonenumbers",
    "dnspython",
    "ipwhois"
]

[project.urls]
Homepage = "https://github.com/oedxdigitals/tracevector"
Source = "https://github.com/oedxdigitals/tracevector"

[project.scripts]
tvx = "tvx.main:main"
